--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -27,32 +27,106 @@
             </ul>
           </div>
       </nav>
-      <div class="container" id="about">
-        <img src="./assets/profile.png" class="img-fluid rounded-circle border border-white border-3">
-        <h1 class="text-gradient">Arthur França</h1>
-        <div class="mt-4">
+      <div class="about-wrapper wrapper" id="about">
+        <div class="about-profile">
+          <img src="./assets/profile.png" class="img-fluid rounded-circle border border-white border-3">
+        </div>
+        <div class="about-text">
+          <h2>
+            Olá, Meu nome é <span class="text-gradient">Arthur França</span>
+          </h2>
+          <h5>
+            Atualmente cursando Engenharia de Software na Uninter, tenho uma base sólida em Python, Vue3, JavaScript, HTML e CSS.
+          </h5>
+          <p class="text-gray">
+            Embora seja um profissional em início de carreira, estou ansioso para aprender novas habilidades e já comecei a explorar Django e IA. Estou entusiasmado por encontrar minha primeira oportunidade de contribuir para o sucesso de uma empresa e confiante de que minhas habilidades técnicas e paixão por aprender me tornarão um ativo valioso para qualquer equipe. Vamos trabalhar juntos para fazer grandes coisas acontecerem!
+          </p>
+        </div>
+        
+      </div>
+
+      <div class="formation-wrapper wrapper" id="formation">
+        <h2 class="title">Formação</h2>
+        <div class="formation-line">
+          <div class="formation-icon-line">
+            <div class="formation-icon-dot-shadow">
+              <div class="formation-icon-dot current"></div>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem; height: auto; background-color: #373740ff;">
+            <div class="card-body">
+              <h5 class="card-title">Engenharia de Software</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Em andamento</h6>
+              <p class="card-text">Graduando</p>
+              <a href="https://www.uninter.com/" role="button" target="_blank">Uninter</a>
+            </div>
+          </div>
+        </div>
+        <div class="formation-line">
+          <div class="formation-icon-line">
+            <div class="formation-icon-dot-shadow">
+              <div class="formation-icon-dot"></div>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem; height: auto; background-color: #373740ff;">
+            <div class="card-body">
+              <h5 class="card-title">Engenharia Civil</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Agosto/2019</h6>
+              <p class="card-text">Primeira formação</p>
+              <a href="https://ufal.br/" role="button" target="_blank">UFAL</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="projects-wrapper wrapper" id="projects">
+        <h2 class="title">Projetos</h2>
+        <div class="container d-flex justify-content-center cards-div" >
+          <div class="card border border-light" style="width: 18rem; height: auto; background-color: #373740ff; margin-right: 30px;">
+            <h4 class="card-header">
+              <h5 class="card-title">Cryptogram</h5>
+            </h4><div class="card-body">
+              <p class="card-text">A Cryptogram game deployed in vue3</p>
+              <a href="https://engarthurfranca.github.io/cryptogram-vue3/" class="btn btn-primary" target="_blank">Access</a>
+              <a class="btn git-btn me-2" href="https://github.com/engArthurFranca/cryptogram-vue3" role="button" target="_blank"><i class="bi bi-github text-light fs-4"></i></a>
+            </div>
+          </div>
+          <div class="card border border-light" style="width: 18rem; height: auto; background-color: #373740ff;">
+            <h4 class="card-header">
+              <h5 class="card-title">NavBar with Router</h5>
+            </h4>
+            <div class="card-body"><p class="card-text">A Bootstrap NavBar with Router in vue3</p>
+              <a href="https://engarthurfranca.github.io/menu-bootstrap-router-vue3/" class="btn btn-primary" target="_blank">Access</a>
+              <a class="btn git-btn me-2" href="https://github.com/engArthurFranca/menu-bootstrap-router-vue3" role="button" target="_blank"><i class="bi bi-github text-light fs-4"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="bg-dark text-light py-4" id="contact">
+        <hr>
+        <div class="container text-center">
+          <h2 class="title">Contato</h2>
+          <p class="mb-0">
+            Gostou do meu Portifólio? Basta me contatar nas redes:
+          </p>
+          <h7>contato@arthurfranca.com</h7>
+          <div>
             <a class="btn social-btn me-2" href="https://www.instagram.com/arthur._.franca/" role="button" target="_blank">
-                <i class="'bi bi-instagram text-light fs-4'"></i>
+                <i class="bi bi-instagram text-light fs-4"></i>
             </a>
             <a class="btn social-btn me-2" href="http://www.youtube.com" role="button" target="_blank">
-                <i class="'bi bi-youtube text-light fs-4'"></i>
+                <i class="bi bi-youtube text-light fs-4"></i>
             </a>
             <a class="btn social-btn me-2" href="https://www.linkedin.com/in/eng-arthurfranca/" role="button" target="_blank">
-                <i class="'bi bi-linkedin text-light fs-4'"></i>
+                <i class="bi bi-linkedin text-light fs-4"></i>
             </a>
             <a class="btn social-btn me-2" href="https://github.com/engArthurFranca" role="button" target="_blank">
-                <i class="'bi bi-github text-light fs-4'"></i>
+                <i class="bi bi-github text-light fs-4"></i>
             </a>
           </div>
-      </div>
-      <div class="" id="formation">
-
-      </div>
-      <div class="" id="projects">
-
-      </div>
-      <div class="" id="contact">
-
-      </div>
+          <p> Desenvolvido por <a href="https://arthurfranca.com" role="button" target="_blank">arthurfranca.com</a> </p>
+          <p>© Arthur França. Todos os direitos reservados</p>
+        </div>
+      </footer>
 </body>
 </html>
