--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -42,7 +42,7 @@
         Atualmente cursando Engenharia de Software na Uninter, tenho uma base sólida em Python, Vue3, JavaScript, HTML e CSS.
       </h5>
       <p class="text-gray">
-        Embora seja um profissional em início de carreira, estou ansioso para aprender novas habilidades e já comecei a explorar Django e IA. Estou entusiasmado por encontrar minha primeira oportunidade de contribuir para o sucesso de uma empresa e confiante de que minhas habilidades técnicas e paixão por aprender me tornarão um ativo valioso para qualquer equipe. Vamos trabalhar juntos para fazer grandes coisas acontecerem!
+        Embora seja um profissional em início de carreira, estou ansioso para aprender novas habilidades e já comecei a explorar Django e IA. Estou entusiasmado por encontrar minha primeira oportunidade de contribuir para o sucesso de uma empresa e confiante de que minhas habilidades técnicas e paixão por aprender me tornarão um profissional proativo em qualquer equipe. Vamos trabalhar juntos para fazer grandes coisas acontecerem!
       </p>
     </div>
   </div>
