--- a/index.html
+++ b/index.html
@@ -4,46 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   
   <title>Portifólio Pessoal</title>
 </head>
-<body class="bg-dark text-light">
-  <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#about">Sobre Mim</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#formation">Formação</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#projects">Projetos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contato</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<body class="text-light">
+
+  <div class="navbar">
+    <ul>
+      <li><a href="#about">Sobre Mim</a></li>
+      <li><a href="#formation">Formação</a></li>
+      <li><a href="#projects">Projetos</a></li>
+      <li><a href="#contact">Contato</a></li>
+    </ul>
+  </div>
+
 
   <div class="about-wrapper wrapper" id="about">
     <div class="about-profile">
       <img src="./assets/profile.png" class="img-fluid rounded-circle border border-white border-3">
     </div>
     <div class="about-text">
-      <h2>
+      <h1>
         Olá, Meu nome é <span class="text-gradient">Arthur França</span>
-      </h2>
-      <h5>
+      </h1>
+      <h3>
         Atualmente cursando Engenharia de Software na Uninter, tenho uma base sólida em Python, Vue3, JavaScript, HTML e CSS.
-      </h5>
-      <p class="text-gray">
+      </h3>
+      <h4 class="text-gray">
         Embora seja um profissional em início de carreira, estou ansioso para aprender novas habilidades e já comecei a explorar Django e IA. Estou entusiasmado por encontrar minha primeira oportunidade de contribuir para o sucesso de uma empresa e confiante de que minhas habilidades técnicas e paixão por aprender me tornarão um profissional proativo em qualquer equipe. Vamos trabalhar juntos para fazer grandes coisas acontecerem!
-      </p>
+      </h4>
     </div>
   </div>
 
@@ -81,29 +70,28 @@
     </div>
   </div>
 
-    <div class="projects-wrapper wrapper" id="projects">
+  <div class="projects-wrapper wrapper" id="projects">
     <h2 class="title">Projetos</h2>
-    <div class="container d-flex justify-content-center cards-div" >
-      <div class="card border border-light" style="width: 18rem; height: auto; background-color: #373740ff; margin-right: 30px;">
-        <h4 class="card-header">
-          <h5 class="card-title">Cryptogram</h5>
-        </h4><div class="card-body">
-          <p class="card-text">A Cryptogram game deployed in vue3</p>
-          <a href="https://engarthurfranca.github.io/cryptogram-vue3/" class="btn btn-primary" target="_blank">Access</a>
-          <a class="btn git-btn me-2" href="https://github.com/engArthurFranca/cryptogram-vue3" role="button" target="_blank"><i class="bi bi-github text-light fs-4"></i></a>
-        </div>
-      </div>
-      <div class="card border border-light" style="width: 18rem; height: auto; background-color: #373740ff;">
-        <h4 class="card-header">
-          <h5 class="card-title">NavBar with Router</h5>
-        </h4>
-        <div class="card-body"><p class="card-text">A Bootstrap NavBar with Router in vue3</p>
-          <a href="https://engarthurfranca.github.io/menu-bootstrap-router-vue3/" class="btn btn-primary" target="_blank">Access</a>
-          <a class="btn git-btn me-2" href="https://github.com/engArthurFranca/menu-bootstrap-router-vue3" role="button" target="_blank"><i class="bi bi-github text-light fs-4"></i></a>
-        </div>
+    <div class="card" style="width: 18rem; height: auto; background-color: #373740ff; margin-right: 30px;">
+      <h4 class="card-header">
+        <h5 class="card-title">Cryptogram</h5>
+      </h4>
+      <div class="card-body">
+        <p class="card-text">A Cryptogram game deployed in vue3</p>
+        <a href="https://engarthurfranca.github.io/cryptogram-vue3/" class="btn btn-primary" target="_blank">Access</a>
+        <a class="btn git-btn me-2" href="https://github.com/engArthurFranca/cryptogram-vue3" role="button" target="_blank"><i class="bi bi-github text-light fs-4"></i></a>
       </div>
     </div>
+    <div class="card border border-light" style="width: 18rem; height: auto; background-color: #373740ff;">
+      <h4 class="card-header">
+        <h5 class="card-title">NavBar with Router</h5>
+      </h4>
+      <div class="card-body"><p class="card-text">A Bootstrap NavBar with Router in vue3</p>
+        <a href="https://engarthurfranca.github.io/menu-bootstrap-router-vue3/" class="btn btn-primary" target="_blank">Access</a>
+        <a class="btn git-btn me-2" href="https://github.com/engArthurFranca/menu-bootstrap-router-vue3" role="button" target="_blank"><i class="bi bi-github text-light fs-4"></i></a>
+      </div>
     </div>
+  </div>
 
   <footer class="bg-dark text-light py-4" id="contact">
     <hr>
