--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       <div class="card" style="width: 18rem; height: auto; background-color: #373740ff; margin-right: 30px;">
         <div class="card-body">
           <h5 class="card-title">Cryptogram</h5>
+          <hr>
           <p class="card-text">A Cryptogram game deployed in vue3</p>
           <div style="display: flex; justify-content: center; align-items: center;">
             <a href="https://engarthurfranca.github.io/cryptogram-vue3/" class="btn" target="_blank">Access</a>
@@ -98,6 +99,7 @@
       <div class="card" style="width: 18rem; height: auto; background-color: #373740ff;">
         <div class="card-body">
           <h5 class="card-title">NavBar with Router</h5>
+          <hr>
           <p class="card-text">A Bootstrap NavBar with Router in vue3</p>
           <div style="display: flex; justify-content: center; align-items: center;">
             <a href="https://engarthurfranca.github.io/menu-bootstrap-router-vue3/" class="btn" target="_blank">Access</a>
@@ -129,7 +131,7 @@
         Gostou do meu Portifólio? Basta me contatar nas redes:
       </p>
       <h7>contato@arthurfranca.com</h7>
-      <div>
+      <div style="margin-top: 10px;">
         <a href="https://www.instagram.com/arthur._.franca/" role="button" target="_blank" style="text-decoration: none;">
           <svg class="btn-social" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg" width="50" height="50">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24ZM24.0012 11.2C20.5249 11.2 20.0886 11.2152 18.7233 11.2773C17.3606 11.3397 16.4305 11.5555 15.6166 11.872C14.7747 12.1989 14.0606 12.6363 13.3491 13.348C12.6371 14.0595 12.1997 14.7736 11.8717 15.6152C11.5544 16.4294 11.3384 17.3598 11.2771 18.7219C11.216 20.0873 11.2 20.5238 11.2 24.0001C11.2 27.4764 11.2155 27.9114 11.2773 29.2767C11.34 30.6394 11.5557 31.5695 11.872 32.3834C12.1992 33.2253 12.6365 33.9394 13.3483 34.6509C14.0595 35.3629 14.7736 35.8013 15.615 36.1283C16.4294 36.4448 17.3598 36.6605 18.7222 36.7229C20.0876 36.7851 20.5236 36.8003 23.9996 36.8003C27.4762 36.8003 27.9111 36.7851 29.2765 36.7229C30.6391 36.6605 31.5703 36.4448 32.3848 36.1283C33.2264 35.8013 33.9394 35.3629 34.6506 34.6509C35.3626 33.9394 35.8 33.2253 36.128 32.3837C36.4427 31.5695 36.6587 30.6391 36.7227 29.277C36.784 27.9116 36.8 27.4764 36.8 24.0001C36.8 20.5238 36.784 20.0876 36.7227 18.7222C36.6587 17.3595 36.4427 16.4294 36.128 15.6155C35.8 14.7736 35.3626 14.0595 34.6506 13.348C33.9386 12.636 33.2266 12.1987 32.384 11.872C31.5679 11.5555 30.6373 11.3397 29.2746 11.2773C27.9092 11.2152 27.4746 11.2 23.9972 11.2H24.0012Z" />
