--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
           </svg>
         </a>
       </div>
-      <hr>
       <p> Desenvolvido por <a href="https://arthurfranca.com" role="button" target="_blank">arthurfranca.com</a></p>
+      <hr style="width: 100%">
       <p>© Arthur França. Todos os direitos reservados</p>
     </div>
   </footer>
